2007-04-04 Harri Pitkänen <hatapitk@iki.fi>

	* Switch to Automake 1.10
	* Increase version number to 0.6.2
	* Build fix for upcoming GCC 4.3, thanks to Martin Michlmayr

2006-11-16 Harri Pitkänen <hatapitk@iki.fi>

	* Support parallel installations of Automake versions
	  1.9 and 1.10. Both seem to work, but default will still
	  be 1.9.

2006-10-18 Harri Pitkänen <hatapitk@iki.fi>

        * Remove misleading and occasionally broken calculation of
	  version information from configure.ac.

2006-09-30 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for formatters -Tlatin1 and -Tutf8. These do
	  not seem to be documented by the ispell manual page, but
	  KDE uses them anyway.

2006-09-29 Harri Pitkänen <hatapitk@iki.fi>

	* Clarify the plans about aspell support in documentation
	* Increase version number to 0.6.1

2006-08-26 Harri Pitkänen <hatapitk@iki.fi>

	* Fix underquoted definition of GLIBMM_PROG_CXX_SUN
	* Path options are no longer used in configuration
	  file, so remove their descriptions from documentation
	* Make Finnish translation actually work
	* Increase version number to 0.6

2006-08-25 Harri Pitkänen <hatapitk@iki.fi>

	* Warning fix for -Wall
	* Note that NEWS is outdated, remove NEWS.fi
	* Update tmispell.pot and fi.po

2006-08-20 Anssi Hannula

	* Add --disable-enchant option to configure

2006-08-15 Harri Pitkänen <hatapitk@iki.fi>

	* Decouple libenchant plugin from the rest of tmispell code.

2006-08-15 Harri Pitkänen <hatapitk@iki.fi>

        * Start replacing the old dlopen/dlsym based dynamic linking
	  mechanism required by binary only Soikko with ordinary compile
	  time dynamic linking. This version works and removes a lot
	  of unnecessary code, but more changes should follow.

2006-07-26 Harri Pitkänen <hatapitk@iki.fi>

	* Fix the build system for new documentation

2006-07-26 Teemu Likonen <tlikonen@iki.fi>

	* Update README, LUEMINUT and manual pages.

	* Remove html pages. They didn't contain anything that is not in the